feat: port `influx setup` from `influxdb` (#35)
